# outcome

./: CMakeLists.txt  README.md
include/Outcome/: outcome_018620768577911c9b259275a5957525d55ad09a_experimental.hpp  outcome_093f364aa6832c39d54d95da8fd0d7ca16fa4a08_experimental.hpp  outcome_571f9c930e672950e99d5d30f743603aaaf8014c_experimental.hpp
